# pyable-dataloader

./: .gitignore  AGENT_HANDOFF_PROMPT.md  ARCHITECTURE.md  DATALOADER_BUILD_PROMPT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_CHECKLIST.md  LLM_AGENT_GUIDE.md  MANIFEST_GUIDE.md  MULTIPLE_AUGMENTATIONS_GUIDE.md  PIPELINE_AGENT_GUIDE.md  PROJECT_COMPLETE.md  PYFE_INTEGRATION.md  QUICKSTART.md  README.md  data  pyproject.toml
examples/: README.md  example_angle_prediction.py  example_lenet_classification.py  example_pytorch_and_pyfe.py  example_segmentation_multiple_augmentations.py  example_segmentation_training.py  example_segmentation_with_augmentation.py  example_simple.py  example_simple_dataset_test.py  example_simple_dataset_test_and_transformations.py  example_unified_nifti_style.py  test_dataloader_centering.py
src/pyable_dataloader/: __init__.py  dataset.py  pyfe_adapter.py  transforms.py  utils.py
tests/: test1.py  test2.py  test_basic.py  test_intensity_percentile_transform_on_realdata_dataloader.py  test_pyfe_adapter.py  test_transforms.py
