[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyable-dataloader"
version = "0.1.0"
description = "PyTorch DataLoader for medical images using pyable"
readme = "README.md"
authors = [
    {name = "Eros Montin", email = "eros.montin@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["medical imaging", "deep learning", "pytorch", "dataloader", "nifti"]

dependencies = [
    "torch>=1.10.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "SimpleITK>=2.0.0",
    "pyable @ git+https://github.com/erosmontin/pyable.git@v3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/erosmontin/able-dataloader"
Documentation = "https://github.com/erosmontin/able-dataloader/blob/main/README.md"
Repository = "https://github.com/erosmontin/able-dataloader"
Issues = "https://github.com/erosmontin/able-dataloader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
